# expert_talk

./: .gitignore  adapter_config.json  pyproject.toml
00_neural_nets/: link.md
01_ngram/: main.py
02_ngram_gen/: main.py
02_rnn/: main.py  main_rnn.py  msin2.py  rnn_network.ipynb
03_fastai/: main_rnn_fastai.py
04_attention/: main.py  test.py
04_lstm/: train.py
05_gemma/: main.py
data/: grimm.txt  grimm_small.txt
data/small/: corpus.txt
flagged/: log.csv
